<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.goodneighbor.Activity.Main.PageActivity">

    <LinearLayout
        android:id="@+id/tv_root"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="644dp"
            android:layout_weight="1"
            android:minHeight="0dp"></LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/tv_tab"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="#ffffff">

        <RadioButton
            android:id="@+id/tv_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/home_check"
            android:gravity="center"
            android:text="@string/text_home" />

        <RadioButton
            android:id="@+id/tv_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/share_check"
            android:gravity="center"
            android:text="@string/text_share" />

        <RadioButton
            android:id="@+id/tv_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/message_check"
            android:gravity="center"
            android:text="@string/circle" />
        <RadioButton
            android:id="@+id/tv_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/me_check"
            android:gravity="center"
            android:text="@string/text_me" />
    </RadioGroup>
</LinearLayout>