<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/postings_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tv_postings_back"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:text="@string/text_back"
                android:textSize="8sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">


            <TextView
                android:text="@string/text_postings_publish"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:layout_weight="1">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tv_postings_publish"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:textSize="8sp"
                android:text="@string/text_postings_publish"
                android:layout_gravity="center" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/postings_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/title"
                android:id="@+id/tv_postings_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:hint="@string/content"
                android:id="@+id/tv_postings_text_content"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:textSize="10sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/postings_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_postings_add_images"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="+"
            android:textSize="30sp"
            android:gravity="center" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/tv_postings_images_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>
    </LinearLayout>

</LinearLayout>