<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/postings_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tv_postings_back"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:text="@string/text_back"
                android:textSize="8sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">


            <TextView
                android:text="@string/text_share"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:layout_weight="1">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tv_postings_publish"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:textSize="8sp"
                android:text="@string/text_postings_publish"
                android:layout_gravity="center" />
        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray">

        <LinearLayout
            android:id="@+id/postings_content"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/radius_border"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="物品名称"
                    android:id="@+id/tv_postings_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:hint="描述"
                    android:id="@+id/tv_postings_text_content"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textSize="10sp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/share_points"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="积分设置"/>
                    <Spinner
                        android:id="@+id/publish_wheelview1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="120dp"
                        android:entries="@array/icons"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/share_box"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="共享柜选择"/>
                    <Spinner
                        android:id="@+id/publish_wheelview2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="106dp"
                        android:entries="@array/share_box"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/share_time" />

                    <TextView
                        android:id="@+id/share_timeCheek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="截至时间" />

                    <TextView
                        android:id="@+id/publish_timeNew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:text="当前时间" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="~"/>
                    <TextView
                        android:id="@+id/publish_timeFinish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="点击选择"
                        android:layout_marginLeft="10dp"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/share_locate"/>
                    <TextView
                        android:id="@+id/share_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="幸福社区A单元二号楼"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/postings_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_share_camera"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/cream"
                    android:scaleType="centerInside"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="点击拍照上传图片"
                    android:textSize="20sp"
                    android:textColor="#E29315"
                    android:layout_gravity="center" />

                <ImageView
                    android:id="@+id/iv_share_show_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerInside" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>